[project]
name = "dspec"
requires-python = ">= 3.10"
license = {text = "MIT"}
dependencies = [
    "xarray",
    "numpy",
    "shapely",
]
dynamic = ["version"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
#packages = ["stac_fastapi.opensearx"]

[tool.setuptools_scm]
fallback_version = "999"

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true
default_section = "THIRDPARTY"